[gd_scene load_steps=3 format=3 uid="uid://q62crlnruouu"]

[ext_resource type="PackedScene" uid="uid://cagh0d5katoqy" path="res://scenes/widgets/item_inventory_widgit.tscn" id="1_oukqi"]
[ext_resource type="Script" path="res://scripts/menues/inventory_ui.gd" id="1_ydbw5"]

[node name="InventoryUI" type="MarginContainer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_ydbw5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ColorRect2" type="ColorRect" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
color = Color(0.227451, 0.227451, 0.227451, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Left" parent="VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer" instance=ExtResource("1_oukqi")]
layout_mode = 2
show_labels = false

[node name="Armour" parent="VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer" instance=ExtResource("1_oukqi")]
layout_mode = 2
show_labels = false

[node name="Right" parent="VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer" instance=ExtResource("1_oukqi")]
layout_mode = 2
show_labels = false

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Inventory"

[node name="amount" type="Label" parent="VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer"]
visible = false
custom_minimum_size = Vector2(512, 128)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/MarginContainer/ScrollContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
columns = 8

[node name="AddToIventoryButton" type="Button" parent="VBoxContainer/MarginContainer"]
visible = false
layout_mode = 2
text = "Add to inventory"

[connection signal="pressed" from="VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer2/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/AddToIventoryButton" to="." method="_on_add_to_iventory_button_pressed"]
